--- a/assets/edd-pup.css
+++ b/assets/edd-pup.css
@@ -177,6 +177,23 @@
 .wp-list-table .column-recipients { width: 10%;}
 .wp-list-table .column-date { width: 20%;}
 
+/* Preview styles */
+#edd-pup-preview {
+	padding: 0 20px;
+	max-width: 600px;
+	margin: 0 auto;
+}
+
+#edd-pup-preview ul {
+	list-style-type: disc;
+	margin-left: 25px;
+}
+
+#edd-pup-preview ul li ul,
+#edd-pup-preview ul ul {
+	list-style-type: circle;
+	margin-left: 25px;
+}
 
 /* Progress Bar */
 
