--- a/assets/edd-pup.css
+++ b/assets/edd-pup.css
@@ -150,7 +150,7 @@
 }
 
 #edd-pup-confirm-message {
-	max-width: 560px; 
+	min-width: 560px; 
 	margin:0 auto; 
 	padding: 20px; 
 	border: 1px solid #e6e6e6; 
