--- a/assets/edd-pup.css
+++ b/assets/edd-pup.css
@@ -115,6 +115,21 @@
 	text-decoration: none;
 }
 
+#edd-pup-single-email .products-inner {
+	border: 1px solid #ddd;
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
+	background-color: #fff;
+	color: #333;
+	padding: 10px;
+	margin: 10px 0;
+	max-height: 200px;
+	overflow-y: scroll;
+	width: 95%;
+	max-width: 430px;
+	min-width: 330px;
+}
+
 .edd-pup-spin {
 	margin: 5px 0 0 10px; 
 	float: none; 
