--- a/assets/css/edd-pup.css
+++ b/assets/css/edd-pup.css
@@ -2,7 +2,7 @@
  * EDD Product Updates Style
  *
  * @project   Easy Digital Downloads - Product Updates Extension
- * @version   1.0.0
+ * @version   1.1.0
  * @author    Evan Luzi
  * @copyright 2014 by the author
  * @cssdoc    version 1.0-pre
@@ -105,7 +105,8 @@
 	clear: both;
 }
 
-#edd-pup-single-email #updated-products {
+#edd-pup-single-email #updated-products,
+#edd-pup-single-email .edd_pup_email_info_list {
 	list-style-type: disc;
     margin-left: 1.5em;
     list-style-position: inside;
