Tweak color of active message toggle buttons

--- a/assets/css/edd-pup.css
+++ b/assets/css/edd-pup.css
@@ -177,7 +177,7 @@
 }
 
 #edd-pup-single-email .message-toggle.active {
-	background: #0074a2;
+	background: #666666;
 	border: 1px solid #666;
 	color: #fff;
 	cursor: auto;
