Initial commit of version 1.2.5

--- a/assets/css/edd-pup.css
+++ b/assets/css/edd-pup.css
@@ -2,9 +2,9 @@
  * EDD Product Updates Style
  *
  * @project   Easy Digital Downloads - Product Updates Extension
- * @version   1.2.1
- * @author    Evan Luzi
- * @copyright 2015 by the author
+ * @version   1.2.5
+ * @author    DevriX
+ * @copyright Copyright (c) 2014-2017
  * @cssdoc    version 1.0-pre
  *
 */
