--- a/assets/css/edd-pup.css
+++ b/assets/css/edd-pup.css
@@ -3,7 +3,7 @@
  *
  * @project   Easy Digital Downloads - Product Updates Extension
  * @version   1.2.5
- * @author    DevriX
+ * @author    EDD Team
  * @copyright Copyright (c) 2014-2017
  * @cssdoc    version 1.0-pre
  *
@@ -12,12 +12,12 @@
 /* List Table
 --------------------------------------------- */
 
-.edd-pup-list .wp-list-table .column-email { 
+.edd-pup-list .wp-list-table .column-email {
 	width: 30%;
 }
 
 .edd-pup-list .wp-list-table .column-status {
-	width: 10%; 
+	width: 10%;
 }
 
 .edd-pup-list .wp-list-table .column-subject {
@@ -143,12 +143,12 @@
 }
 
 .edd-pup-spin {
-	margin: 5px 0 0 10px; 
-	float: none; 
+	margin: 5px 0 0 10px;
+	float: none;
 }
 
 .edd-pup-spin.loading {
-	display: inline-block; 
+	display: inline-block;
 }
 
 #bundle_filters {
@@ -209,44 +209,44 @@
 #edd-pup-confirm-title,
 #edd-pup-confirm-message h3,
 #edd-pup-confirm-footer {
-	text-align:center; 
+	text-align:center;
 }
 
 #edd-pup-confirm-title {
-	font-size:28px; 
+	font-size:28px;
 }
 
 #edd-pup-confirm-message h3 {
-	margin-top:0; 
-	color:#999; 
+	margin-top:0;
+	color:#999;
 }
 
 #edd-pup-confirm-message {
-	min-width: 560px; 
-	margin:0 auto; 
-	padding: 20px; 
-	border: 1px solid #e6e6e6; 
+	min-width: 560px;
+	margin:0 auto;
+	padding: 20px;
+	border: 1px solid #e6e6e6;
 }
 
 #edd-pup-confirm-header {
-	padding:0 0 10px; 
-	border-bottom:1px solid #e6e6e6; 
+	padding:0 0 10px;
+	border-bottom:1px solid #e6e6e6;
 }
 
 #edd-pup-confirm-footer {
 	padding:20px 0 0;
 	margin: 0;
-	border-top:1px solid #e6e6e6; 
+	border-top:1px solid #e6e6e6;
 }
 
 #edd-pup-confirm-footer ul {
 	padding-bottom:10px;
-	text-align:left; 
+	text-align:left;
 }
 
 #edd-pup-confirm-products {
-	margin-left:25px; 
-	list-style-type: disc; 	
+	margin-left:25px;
+	list-style-type: disc;
 }
 
 #edd-pup-confirm-bundle-products {
@@ -259,12 +259,12 @@
 --------------------------------------------- */
 
 #colorbox #cboxClose {
-	top: 0; 
-	right: 0; 
+	top: 0;
+	right: 0;
 }
 
 #cboxLoadedContent {
-	margin: 28px 0 0;  
+	margin: 28px 0 0;
 }
 
 /* View Queue Details
@@ -421,7 +421,7 @@
 }
 
 .progress-bar.red {
-  background-color: #f63a0f;	
+  background-color: #f63a0f;
 }
 
 .progress-bar.orange {
@@ -429,11 +429,11 @@
 }
 
 .progress-bar.yellorange {
-  background-color: #f2b01e;	
+  background-color: #f2b01e;
 }
 
 .progress-bar.yellow {
-  background-color: #f2d31b;	
+  background-color: #f2d31b;
 }
 
 .progress-bar.green {
